--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,12 +37,8 @@ address {
     h4,
     span {
         display: block;
-        margin: .25em auto;
-        padding: {
-            top: 0;
-            right: 0;
-            left: .25em;
-        }
+        padding: 0;
         text-align: left;
+        
     }
 }
