--- a/src/styles/responsive/medium.scss
+++ b/src/styles/responsive/medium.scss
@@ -139,4 +139,35 @@
         }
       }
     }
+
+    //  Footer
+    footer.main-footer {
+      padding: 1em;
+     .col {
+      &:nth-child(1) {
+        border-right: 1px solid hsl(70, 50%, 75%);
+       flex-direction: row;
+        justify-content: flex-end;
+        grid-column: 1 / 3;
+      }
+      &:nth-child(2) {
+        border-right: 1px solid hsl(70, 50%, 75%);
+       flex-direction: column;
+        justify-content: flex-start;
+        grid-column: 3 / 4;
+        padding-left: 1em;
+      }
+      &:nth-child(3) {
+       flex-direction: column;
+        justify-content: flex-start;
+        grid-column: 4 / 6;
+        padding-left: 1em;
+      }
+     }
+      ul {
+        li {
+          display: block;
+        }
+      }
+    }
 }
