--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -253,4 +253,94 @@
     text-align: center;
 
   }
+
+  //  Footer
+  footer.main-footer {
+    align-items: center;
+    background: hsl(62, 23%, 24%);
+    display: grid;
+    gap: 1em;
+    grid-template-columns: repeat(auto-fill, minmax(100%));
+    padding: {
+      top: 1em;
+      right: 1em;
+      bottom: 0em;
+      left: 1em;
+    }
+    justify-items: center;
+    h4 {
+      padding: 0;
+    }
+    ul {
+      list-style: none;
+      width: 100%;
+      li {
+        display: inline-block;
+        margin: {
+          right: 1em;
+        }
+        a {
+          padding: .5em 1.5em .5em 0em;
+        }
+      }
+    }
+    a {
+      color: hsl(70, 50%, 75%);
+    }
+    .col {
+      align-items: center;
+      justify-content: flex-start;
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      height: 100%;
+      width: 100%;
+      h4 {
+        align-self: flex-start;
+        margin-bottom: 1em;
+        position: relative;
+        text-align: left;
+        &::after {
+          background:hsl(70, 50%, 75%);
+          bottom: -7px;
+          content: '';
+          display: block;
+          height: 2px;
+          left: 50%;
+          max-width: 150px;
+          position: absolute;
+          transform: translateX(-50%);
+          width: 100%;
+        }
+      }
+      ul {
+        li {
+          a {
+            display: block;
+            text-decoration: none;
+            text-transform: lowercase;
+          }
+        }
+      }
+      address {
+        padding: 0;
+        width: 100%;
+        span {
+          &:first-of-type {
+            font-weight: 800;
+        }
+        }
+      }
+    }
+  }
+
+  //  brand bar
+  .brand-bar {
+    align-items: center;
+    background: hsl(30, 13%, 6%);
+    display: grid;
+    justify-content: center;
+    padding: .25em 1em;
+    
+  }
 }
