--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,13 @@
 @use './responsive/medium.scss';
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 html,
 body {
