--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -45,6 +45,11 @@
     color: #fff;
   }
 
+
+  section > h3 {
+    font-size: 2.5em;
+  }
+
   // Main Header
   header.main-header {
     background: no-repeat fixed center center / cover;
@@ -56,6 +61,12 @@
     h1,
     h2 {
       @include text-shadow;
+    }
+    p {
+      font-size: 1.25em;
+      max-width: 60ch;
+      padding: 1em;
+      text-shadow: 0 0 7px #000;
     }
     .col {
       align-items: center;
@@ -301,9 +312,12 @@
   //  Events
   section.events {
     h3 {
+      font-size: 2.5em;
       text-align: center;
+      text-shadow: 2px 2px 10px rgba(255,255,255,0.33);
     }
     .event-panel {
+      margin: 1em auto;
       position: relative;
       .inner-panel {
         .row {
@@ -314,7 +328,9 @@
           justify-content: center;
           padding: 1em;
           .col {
-            flex: 1 1 50%;
+            flex: 0 0 100%;
+            margin: auto;
+            text-align: center;
             .row {
               justify-content: flex-start;
               h4 {
@@ -440,8 +456,15 @@
     align-items: center;
     background: hsla(49, 18%, 36%, 10%);
     display: grid;
+    font-family: 'Montserrat', sans-serif, monospace;
+    font-weight: 400;
     justify-content: center;
     padding: .25em 1em;
-    
+    a {
+      border: {
+        bottom: 1px solid hsl(70, 50%, 75%);
+      }
+      padding-bottom: 3px;
+    }
   }
 }
