--- a/src/styles/responsive/medium.scss
+++ b/src/styles/responsive/medium.scss
@@ -121,7 +121,7 @@
         .price-card {
           @include transition;
           border-radius: 10px;
-          box-shadow: 2px 2px 20px -10px rgba(255,255,255,1);
+          box-shadow: 2px 2px 20px -15px rgba(255,255,255,1);
           flex: 1 1 20%;
           margin: 1em;
           max-height: 100vh;
@@ -132,10 +132,9 @@
             align-items: center;
             font-size: 1.25em;
             border: {
-              top: 2px solid green;
-              bottom: 2px solid green;
+              top: 2px solid #fff;
+              bottom: 2px solid #fff;
             }
-            background: #fff;
             display: flex;
             justify-content: center;
             min-height: 75px;
