--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -53,7 +53,7 @@
   // Main Header
   header.main-header {
     background: no-repeat fixed center center / cover;
-    background-image: url("../images/paintball-in-forest-small.jpg");
+    background-color: transparent;    
     color: #fff;
     display: grid;
     grid-template-columns: 1fr;
@@ -317,6 +317,41 @@
       text-align: center;
       text-shadow: 2px 2px 10px rgba(255,255,255,0.33);
     }
+    .event-btn {
+      @include transition;
+      background: transparent;
+      border: 1px solid hsl(70, 50%, 75%);
+      color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      margin: {
+        top: 0;
+        right: .5em;
+        bottom: 0;
+        left: .5em;
+      }
+      padding: .5em 1em;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.25em;
+      font-weight: 600;
+      &:hover {
+        animation: shrinkHeight;
+        background: hsl(70, 50%, 75%);
+        color: hsl(30, 13%, 6%);
+        @include text-shadow;
+      }
+    }
+    .active-btn {
+      background: hsl(70, 50%, 75%);
+      color: hsl(30, 13%, 6%)
+    }
+    .btn-container,
+    .event-container {
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
     .event-panel {
       margin: 1em auto;
       position: relative;
@@ -364,6 +399,11 @@
     &::after {
       bottom: -1px;
     }
+    }
+    &::after {
+      content: '';
+      display: table;
+      clear: both;
     }
   }
 
