--- a/src/styles/responsive/medium.scss
+++ b/src/styles/responsive/medium.scss
@@ -210,7 +210,7 @@
               }
               .date,
               .cost {
-                font-size: .75em;
+                font-size: 1em;
               }
             }
           }
