--- a/src/styles/responsive/medium.scss
+++ b/src/styles/responsive/medium.scss
@@ -113,43 +113,54 @@
     }
     section.pricing {
       margin: 1em auto;
-      max-width: 1368px;
+      max-width: 1366px;
+      padding-top: 1em;
       .pricing-container {
        flex-direction: row;
-       flex-wrap: wrap;
+       flex-wrap: nowrap;
+       justify-content: center;
+       .col {
+         &:nth-child(1) {
+           justify-content: center;
+           padding-top: 1em;
+           flex: 1 1 33%;
+         }
+         &:nth-child(2) {
+           flex: 2 2 66%;
+         }
+       }
         .price-card {
           @include transition;
-          border-radius: 10px;
-          box-shadow: 2px 2px 20px -15px rgba(255,255,255,1);
-          flex: 1 1 20%;
+          background: transparent;
+          border: none;
           margin: 1em;
           max-height: 100vh;
           padding: 0;
           padding-bottom: 1em;
           overflow: auto;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          min-height: 75px;
+          padding: .33em 0;
           h3 {
-            align-items: center;
+            align-self: center;
             font-size: 1.25em;
             border: {
-              top: 2px solid #fff;
               bottom: 2px solid #fff;
             }
-            display: flex;
-            justify-content: center;
-            min-height: 75px;
-            padding: .33em;
-            vertical-align: center;
+            padding-bottom: 0.5em;
+            text-align: left;
+            width: 100%;
           }
           span.price {
-            background:rgba(0, 0, 0, 0.66);
-            border: {
-              top: 2px solid green;
-              bottom: 2px solid green;
-            }
+            background:transparent;
             color:hsl(70, 50%, 75%);
             display: block;
             font-size: 3em;
-            text-align: center;
+            padding-left: 1rem;
+            text-align: left;
+            width: 100%;
           }
           ul {
             list-style-image: url('../images/paintballs.png');
@@ -160,12 +171,18 @@
               left: 1em;
             };
           }
+          span.extras {
+            display: inline-block;
+            font-weight: initial;
+            margin-left: 1em;
+          }
           p.description {
-            display: none;
+            display: block;
             padding: 1em;
           }
-          &:hover {
-            box-shadow: 2px 2px 20px -5px green;
+          &:hover,
+          &:focus {
+            outline: 1px solid hsl(70, 50%, 75%);
           }
         }
       }
@@ -225,9 +242,13 @@
       
       &:nth-child(1) {
         border-right: 1px solid hsl(70, 50%, 75%);
-       flex-direction: row;
+       flex-direction: column;
+        flex-wrap: nowrap;
         justify-content: flex-end;
         grid-column: 1 / 3;
+        p {
+          text-align: right;
+        }
       }
       &:nth-child(2) {
         border-right: 1px solid hsl(70, 50%, 75%);
@@ -238,7 +259,7 @@
       }
       &:nth-child(3) {
        flex-direction: column;
-        justify-content: flex-start;
+       justify-content: flex-start;
         grid-column: 4 / 6;
         padding-left: 1em;
       }
