--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -357,7 +357,7 @@
       .price-card{
         background:transparent;
         border: 2px solid #008000;
-        color: forestgreen;
+        color: #fff;
         flex: 1 1 100%;
         margin: 1em auto;
         padding: 1em 1em 2em 1em;
@@ -397,6 +397,7 @@
     padding: 1em;
     text-align: center;
     h3 {
+      text-shadow: 0 0 2px rgba(255, 255, 255 0.75);
       font-size: 2em;
       text-transform: capitalize;
     }
