--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -397,7 +397,7 @@
     padding: 1em;
     text-align: center;
     h3 {
-      text-shadow: 0 0 2px rgba(255, 255, 255 0.75);
+      text-shadow: 0 0 2px rgba(255, 255, 255, 0.75);
       font-size: 2em;
       text-transform: capitalize;
     }
