--- a/src/styles/responsive/small.scss
+++ b/src/styles/responsive/small.scss
@@ -397,8 +397,9 @@
     padding: 1em;
     text-align: center;
     h3 {
-      text-shadow: 0 0 2px rgba(255, 255, 255, 0.75);
+      color: #fff;
       font-size: 2em;
+      text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.66);
       text-transform: capitalize;
     }
     .container {
